# Nishikigi

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  run.sh
src/: agent.py  config.py  core.py  image.py  main.py  models.py  utils.py
templates/: anonymous.html  normal.html  page.html
